@@ -168,7 +168,7 @@
  * [\ref help.cpp] [\ref inkscape.cpp] [\ref inkscape-stock.cpp]
  * [\ref interface.cpp, \ref memeq.h] [\ref main.cpp, \ref winmain.cpp]
  * [\ref menus-skeleton.h, \ref preferences-skeleton.h]
- * [\ref object-ui.cpp] [\ref select-toolbar.cpp] [\ref shortcuts.cpp]
+ * [\ref context-menu.cpp] [\ref select-toolbar.cpp] [\ref shortcuts.cpp]
  * [\ref sp-cursor.cpp] [\ref text-edit.cpp] [\ref toolbox.cpp, \ref ui/widget/toolbox.cpp]
  * Inkscape::Verb [\ref verbs.h]
  *
